# Podium

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  eslint.config.js  index.html  justfile  package.json  pnpm-lock.yaml  vite.config.ts
.claude/skills/release/: SKILL.md
.github/workflows/: build.yml  ci.yml
crates/podium-core/: Cargo.toml
crates/podium-core/src/: assignment.rs  config.rs  error.rs  events.rs  ids.rs  lib.rs  orchestrator.rs  platform.rs  project.rs  scratchpad.rs  todo.rs  worktree.rs
crates/podium-core/src/agent/: auggie.rs  claude.rs  mod.rs  settings.rs
crates/podium-core/src/mcp/: bridge.rs  install.rs  mod.rs  tools.rs
crates/podium-core/src/process/: mod.rs  pty.rs  scrollback.rs  supervisor.rs
crates/podium-core/tests/: mcp_bridge.rs  mcp_server.rs  pty_engine.rs  supervision.rs
scripts/: make-dmg.sh
src/: App.module.css  App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  events.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: agent.rs  mcp.rs  mod.rs  process.rs  project.rs  recents.rs  scratchpad.rs  todo.rs  window.rs  workspace.rs  worktree.rs
src/components/: AgentScratchpadList.test.tsx  AgentScratchpadList.tsx  AgentTodoList.module.css  AgentTodoList.test.tsx  AgentTodoList.tsx  ArchiveModal.module.css  ArchiveModal.test.tsx  ArchiveModal.tsx  CloseWarningModal.module.css  CloseWarningModal.test.tsx  CloseWarningModal.tsx  CopyIdButton.test.tsx  CopyIdButton.tsx  LogoMark.tsx  Markdown.module.css  Markdown.test.tsx  Markdown.tsx  NewAgentModal.module.css  NewAgentModal.test.tsx  NewAgentModal.tsx  ProcessRow.module.css  ProcessRow.test.tsx  ProcessRow.tsx  ScratchpadAgentModal.test.tsx  ScratchpadAgentModal.tsx  ScratchpadArchiveModal.test.tsx  ScratchpadArchiveModal.tsx  ScratchpadDetailPane.module.css  ScratchpadDetailPane.test.tsx  ScratchpadDetailPane.toc.test.tsx  ScratchpadDetailPane.tsx  ScratchpadEditor.test.tsx  ScratchpadEditor.tsx  ScratchpadSubsection.test.tsx  ScratchpadSubsection.tsx  ScratchpadTOC.module.css  ScratchpadTOC.test.tsx  ScratchpadTOC.tsx  ScratchpadToolbar.module.css  ScratchpadToolbar.test.tsx  (+33 more)
src/ipc/: commands.ts  events.ts  types.ts
src/lib/: agentPrompt.test.ts  agentPrompt.ts  dateFormat.ts  links.ts  log.ts  motion.ts  notify.ts  platform.ts  processStatus.ts  termProtocol.test.ts  termProtocol.ts  terminalRegistry.test.ts  terminalRegistry.ts  terminalTheme.ts  tiptapHeadings.test.ts  tiptapHeadings.ts  useAgentActivity.ts
src/state/: agentActivityStore.test.ts  agentActivityStore.ts  layoutStore.ts  processStore.ts  projectStore.test.ts  projectStore.ts  scratchpadStore.test.ts  scratchpadStore.ts  settingsStore.ts  themeStore.ts  toastStore.ts  todoStore.ts
src/styles/: global.css  tokens.css
src/test/: setup.ts
src/types/: tiptap-markdown.d.ts
