[package]
name = "podium"
description = "Podium — an agent orchestration workspace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[lib]
# The `_lib` suffix avoids a name clash with the binary on Windows.
# See https://github.com/rust-lang/cargo/issues/8519
name = "podium_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
podium-core = { path = "../crates/podium-core" }
tauri = { version = "2", features = [] }
# `dialog` gives the frontend a native folder picker for opening projects.
tauri-plugin-dialog = "2"
# `log` provides the global logger sink (stdout + per-OS log dir + webview).
tauri-plugin-log = "2"
# Persist and restore window size/position across runs.
tauri-plugin-window-state = "2"
# Opens URLs (to-do links, markdown links) in the OS default browser instead
# of navigating the webview — supported on Windows, macOS, and Linux.
tauri-plugin-opener = "2"
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
# Terminal bytes are base64-encoded across the IPC bridge for JSON safety.
base64 = "0.22"
tokio.workspace = true
uuid.workspace = true
# Structured instrumentation. The `log` feature makes `tracing` events fall
# through to the global `log` logger that `tauri-plugin-log` installs. Never
# used to log terminal output or the MCP bearer token.
tracing = { workspace = true, features = ["log"] }
# App-data-dir resolution for the `mcp-bridge` subcommand, which runs
# without a Tauri app (and thus without Tauri's path resolver).
dirs = "6.0.0"
tauri-plugin-notification = "2.3.3"
